Fixed Navbar
Fixed issue with hamburger menu not showing up in all browsers. Also
changed spacing of navbar items so that they are uniform throughout
screensize changes

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 h1,h3 {
   font-family: var(--main-font);
   font-weight: 300;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.17);
 }
 p{
   font-family: var(--sub_font);
@@ -43,8 +44,8 @@ p{
   text-align: center;
 }
 li{
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 li,a {
   display: block;
@@ -68,14 +69,26 @@ li.active a{
   border: 1px solid var(--cream);
   stroke: var(--cream);
 }
-.navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#FAF4E8' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-}
+
 button:focus {
   outline: none;
 }
 button:hover{
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+/* HAMBURGER BAR STYLES */
+.container {
+    display: inline-block;
+    padding-left: 1px;
+    padding-right: 1px;
+}
+
+.bar{
+    width: 1.2rem;
+    height: 2px;
+    border-radius: 5px;
+    background-color: var(--cream);
+    margin: 6px 0;
 }
 
 /* HOMEPAGE NAVBAR ADJUSTMENTS */
